--- a/src/NLog.Targets.MicrosoftTeams/NLog.Targets.MicrosoftTeams.csproj
+++ b/src/NLog.Targets.MicrosoftTeams/NLog.Targets.MicrosoftTeams.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net472;net6;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net481;net10.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>A NLog target that writes to Microsoft Teams Channel via O365 Webhook Connector.</Description>
     <Copyright>Copyright © Kin Tam 2024</Copyright>
@@ -19,10 +19,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="NLog" Version="5.1.1" />
+    <PackageReference Include="NLog" Version="6.1.0" />
+    <PackageReference Include="System.Text.Json" Version="10.0.3" Condition="'$(TargetFramework)' != 'net10.0'" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net481' ">
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
