--- a/src/NLog.Targets.MicrosoftTeams/NLog.Targets.MicrosoftTeams.csproj
+++ b/src/NLog.Targets.MicrosoftTeams/NLog.Targets.MicrosoftTeams.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net481;net10.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net472;net6;net8.0;net10.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>A NLog target that writes to Microsoft Teams Channel via O365 Webhook Connector.</Description>
     <Copyright>Copyright © Kin Tam 2024</Copyright>
